--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,22 +1,23 @@
 {
-    "manifest_version": 2,
-    "name": "Chrome App Native GO",
-    "short_name": "ChromeNativeGo",
-    "description": "A sample for chrome native messaging with go program",
-    "version": "1.0.0",
-    "minimum_chrome_version": "38",
+  "manifest_version": 2,
+  "name": "Chrome App Native GO",
+  "short_name": "ChromeNativeGo",
+  "description": "A sample for chrome native messaging with go program",
+  "version": "1.0.0",
+  "minimum_chrome_version": "38",
 
-    "icons": {
-        "16": "images/icon_16.png",
-        "128": "images/icon_128.png"
-    },
+  "icons": {
+    "16": "images/icon_16.png",
+    "128": "images/icon_128.png"
+  },
 
-    "permissions": [
-    ],
+  "permissions": [
+    "nativeMessaging"
+  ],
 
-    "app": {
-        "background": {
-            "scripts": ["scripts/background.js"]
-        }
+  "app": {
+    "background": {
+      "scripts": ["scripts/background.js"]
     }
+  }
 }
